# snatcher

./: .env.sample  README.md  pyproject.toml
src/: character.py  cli.py  config.py  gemini.py  main.py
tests/: test_character.py  test_main.py
